<resources>
    <string name="app_name">Home work</string>
    <string name="textView1">Some text</string>
    <string name="textView2">Any text</string>
    <string name="button1">Change</string>
    <string name="user_name">User name</string>
    <string name="password">Password</string>
    <string name="create_account">CREATE ACCOUNT</string>
    <string name="username_password">
        <u>Forgot you username/password?</u>
    </string>
    <string name="ent_address_edit">Enter please address pictures</string>
    <string name="load_picture">Load picture</string>
    <string name="dz0">Dz0</string>
    <string name="dz1">Dz1</string>
    <string name="nameTextViewDz3">Dylan Conner</string>
    <string name="followers">FOLLOWERS</string>
    <string name="following">FOLLOWING</string>
    <string name="trophies">TROPHIES</string>
    <string name="dz3">dz3</string>
    <string name="dz2">dz2</string>
    <string name="dz2_2">dz2_2</string>
    <string name="dz4">dz4</string>
    <string name="dz5_1">dz5_1</string>
    <string name="dz5_2">dz5_2</string>
    <string name="dz6_edit_profile">Edit profile</string>
    <string name="dz6_delete_profile">Delete profile</string>
    <string name="dz6Search">Search</string>
    <string name="dz6">dz6</string>    
    <string name="dz8">dz8</string>
    <string name="dz8_save">SAVE</string>
    <string name="dz8_age">Age:</string>
    <string name="dz8_name">Name:</string>
    <string name="dz8_url">Url:</string>
    <string name="title_activity_maps">Map</string>    
    <string name="dz9_list_of_available_cars">List of available cars</string>
    <string name="dz9">dz9</string>
    <string name="dz11EmptyText">Enter data please</string>
    <string name="dz11mvp">dz11mvp</string>
    <string name="dz11mvvm">dz11mvvm</string>
    <string name="dz12student">dz12Student</string>
    <string name="dz12cars">dz12Cars</string>
    <string name="dz12_name">Name:</string>
</resources>
