<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".dz0.Dz0Activity"
        android:background="@color/colorPrimary"
        android:orientation="vertical">

    <TextView
            android:id="@+id/oneTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/textView1"
            android:textSize="50sp"
            android:gravity="center_horizontal"
            android:background="@color/colorTv1"/>

    <TextView
            android:id="@+id/twoTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/textView2"
            android:textSize="50sp"
            android:gravity="center_horizontal"
            android:layout_gravity="start"
            android:background="@color/colorTv2"/>

    <Button
            android:id="@+id/oneButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button1"
            android:textSize="50sp"
            android:layout_gravity="start"
            android:background="@color/colorButton"/>

</LinearLayout>