<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/black"
    android:orientation="horizontal">

    <ProgressBar
        android:id="@+id/dz12EditProgressBar"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <LinearLayout
        android:id="@+id/dz12EditLinearLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="50dp"
                android:text="@string/dz8_name"
                android:textColor="@color/numberColorDz3"
                android:textSize="20sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="40dp"
                android:text="@string/dz8_age"
                android:textColor="@color/numberColorDz3"
                android:textSize="20sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="40dp"
                android:text="@string/dz8_url"
                android:textColor="@color/numberColorDz3"
                android:textSize="20sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="2dp"
            android:layout_height="155dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="53dp"
            android:background="@android:color/white">

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginRight="20dp"
            android:orientation="vertical">

            <EditText
                android:id="@+id/dz12NameEditProfileEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="50dp"
                android:background="@color/loginEditText"
                android:hint="@string/dz8_name"
                android:inputType="text"
                android:textColor="@android:color/white"
                android:textColorHint="@android:color/white"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/dz12AgeEditProfileEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="40dp"
                android:background="@color/loginEditText"
                android:hint="@string/dz8_age"
                android:inputType="number"
                android:maxLines="2"
                android:textColor="@android:color/white"
                android:textColorHint="@android:color/white"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/dz12UrlEditProfileEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="40dp"
                android:background="@color/loginEditText"
                android:hint="@string/dz8_url"
                android:inputType="textUri"
                android:textColor="@android:color/white"
                android:textColorHint="@android:color/white"
                android:textSize="20sp" />

            <View
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <Button
                android:id="@+id/dz12SaveEditProfileButton"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginBottom="50dp"
                android:background="@color/numberColorDz3"
                android:text="@string/dz8_save"
                android:textColor="@android:color/white" />

        </LinearLayout>

    </LinearLayout>

</FrameLayout>